# Far-NetBox

./: .clang-format  .cursorrules  .editorconfig  .gitignore  .sonarcloud.properties  01-RESEARCH.md  2026-02-28-prepare-environment-for-winxp-build.md  AGENTS-Overview.md  AGENTS-Standards.md  AGENTS-Structure.md  AGENTS-Workflows.md  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CODEBASE.md  ChangeLog  DEPENDENCIES.md  PLAN.md  PLAN_REFINEMENT_REPORT.md  PROJECT.md  PROJECT_RULES.md  PROMPT_REVIEW.md  README.PL.md  README.RU.md  README.md  REFACTORING_PLAN.md  SOURCE_ORGANIZATION.md  appveyor.bat  appveyor.yml  build-all.bat  build-arm64.bat  build-debug-win32.bat  build-debug-x64.bat  build-winxp.bat  build-x64.bat  build-x86.bat  find-vs.bat  findings.md  readme.txt  readme_ru.txt  (+1 more)
NetBox/: CMakeLists.txt  ChangeLog  EasyURL.cpp  EasyURL.h  FTP.cpp  FTP.h  FTPS.cpp  FTPS.h  FarConfiguration.cpp  FarConfiguration.h  FarInterface.cpp  FarTexts.h  Logging.cpp  Logging.h  NetBox.cpp  NetBox.def  NetBox.rc  NetBox.sln  NetBox.vcxproj  NetBoxEng.lng  NetBoxPlugin.cpp  NetBoxPlugin.h  NetBoxRus.lng  Panel.cpp  Panel.h  ProgressWindow.cpp  ProgressWindow.h  Protocol.h  ProtocolBase.h  SCP.cpp  SFTP.cpp  SFTP.h  Session.cpp  Session.h  SessionEditor.cpp  SessionEditor.h  SessionManager.cpp  SessionManager.h  Settings.cpp  Settings.h  (+20 more)
NetBox/Sessions/: ftp.secureftp-test.com.netbox
NetBox/libssh2/: libssh2.vcxproj
NetBox/tinyXML/: tinyxml.cpp
NetBox/zlib/: zlib.vcxproj
libs/atlmfc/: CMakeLists.txt  mfc.vcxproj  mfc.vs2015.vcxproj  mfc1.cpp  mfc2.cpp  mfc3.cpp  mfc4.cpp  mfc5.cpp
libs/dlmalloc/: CMakeLists.txt  dlmalloc-2.8.6.h  dlmalloc.cc  dlmalloc.vcxproj  dlmalloc.vs2015.vcxproj  malloc-2.8.6.h  malloc.c
libs/expat/: CMakeLists.txt  expat_config.h
libs/fmt/: CMakeLists.txt  fmt.vcxproj  fmt.vs2015.vcxproj  format.cc  format.h
libs/libs3/: CMakeLists.txt  libs3.vs2015.vcxproj
libs/neon/: CMakeLists.txt  Makefile.bcb  NEWS  config.h.in  libneon.vcxproj  libneon.vs2015.vcxproj
libs/openssl-3/: .gitignore  0001-openssl-NetBox-patches.patch  0001-openssl-apply-NetBox-patches.patch  CMakeLists.txt
libs/putty/: CMakeLists.txt  be_list.c  be_misc.c  callback.c  conf.c  conf.h  conf.winscp.h  cproxy.c  defs.h  errsock.c  import.c  int64.c  int64.h  ldisc.c  ldisc.h  libputty.vcxproj  libputty.vs2015.vcxproj  logging.c  marshal.h  misc.c  misc.h  miscucs.c  network.h  noshare.c  pageant.h  pgssapi.c  pgssapi.h  portfwd.c  proxy.c  proxy.h  putty.h  puttyexp.h  puttymem.h  settings.c  ssh.c  ssh.h  sshaes.c  ssharcf.c  sshbcrypt.c  sshblowf.c  (+27 more)
libs/tinylog/: CMakeLists.txt  tinylog.vcxproj  tinylog.vs2015.vcxproj
libs/tinyxml2/: CMakeLists.txt  diff.patch  libtinyxml2.vcxproj  libtinyxml2.vs2015.vcxproj  tinyxml2.cpp  tinyxml2.h
libs/zlib-ng/: CMakeLists.txt  adler32.c  chunkset_tpl.h  cpu_features.h  crc32.c  crc32.h  crc32_braid_comb.c  crc32_braid_p.h  deflate.c  deflate.h  deflate_fast.c  deflate_huff.c  deflate_medium.c  deflate_p.h  deflate_rle.c  deflate_slow.c  deflate_stored.c  functable.c  functable.h  gzguts.h  gzlib.c  infback.c  inffast_tpl.h  inflate.c  inflate.h  inflate_p.h  inftrees.c  insert_string_roll.c  insert_string_tpl.h  match_tpl.h  trees.c  zbuild.h  zlib-ng.h  zlib.h  zlib_name_mangling.h  zutil.c  zutil.h  zutil_p.h
src/: CMakeLists.txt
src/Common/: Classes.cpp  Classes.h  Common.cpp  Common.h  FarDialog.cpp  FarDialog.h  FarPlugin.cpp  FarPlugin.h  FarSettings.h  FarUtil.cpp  FarUtil.h  makeCopyCommon.cmd
src/NetBox/: CMakeLists.txt  ChangeLog  EasyURL.cpp  EasyURL.h  FTP.cpp  FTPS.cpp  Far3Storage.cpp  Far3Storage.h  FarConfiguration.cpp  FarConfiguration.h  FarDialog.cpp  FarDialog.h  FarInterface.cpp  FarInterface.h  FarPlugin.cpp  FarPlugin.h  FarPluginStrings.cpp  FarPluginStrings.h  FarTexts.h  FarUtil.cpp  FarUtil.h  FarUtils.cpp  FarUtils.h  FastDelegate.h  FastDelegateBind.h  Logging.cpp  MessageDlg.cpp  NetBox.cpp  NetBox.def  NetBox.en.hlf  NetBox.rc  NetBox.rc.template  NetBox.ru.hlf  NetBox.sln  NetBox.vcxproj  NetBox.vs2015.sln  NetBox.vs2015.vcxproj  NetBoxEng.lng  NetBoxFr.lng  NetBoxPlugin.cpp  (+65 more)
src/Putty/: LOGGING.C  NETWORK.H  PROXY.C  PUTTYEXP.H  SSH.C  SSH.H  SSHBN.C  SSHPUBK.C  SSHRAND.C  SSHRSA.C  X11FWD.C  libputty.vcxproj
src/WinSCP/: FarConfiguration.cpp  FarInterface.cpp  FarTexts.h  WinSCPDialogs.cpp  WinSCPFileSystem.cpp  WinSCPFileSystem.h  WinSCPPlugin.cpp
src/base/: BaseDefs.hpp  Classes.cpp  Classes.h  Classes.hpp  Common.cpp  Common.h  Consts.hpp  CppProperties.h  DynamicQueue.hpp  Exceptions.cpp  Exceptions.h  FastDelegate.h  FileBuffer.cpp  FileBuffer.h  FormatUtils.cpp  FormatUtils.h  Global.cpp  Global.h  GlobalUtils.cpp  GlobalUtils.hpp  LanguagesDEPfix.hpp  LibraryLoader.cpp  LibraryLoader.hpp  LogContext.cpp  LogContext.h  Masks.cpp  Masks.hpp  MsgIDs.h  ObjIDs.cpp  ObjIDs.h  Property.hpp  SecureString.cpp  SecureString.h  StrUtils.cpp  StrUtils.hpp  System.IOUtils.cpp  System.IOUtils.hpp  System.ShlObj.hpp  System.StrUtils.hpp  System.SyncObjs.cpp  (+27 more)
src/core/: Bookmarks.cpp  Bookmarks.h  Certificates.cpp  Certificates.hpp  Classes.cpp  Classes.h  Common.cpp  Common.h  Configuration.cpp  Configuration.h  CopyParam.cpp  CopyParam.h  CoreDefs.hpp  CoreMain.cpp  CoreMain.h  Cryptography.cpp  Cryptography.h  Exceptions.cpp  Exceptions.h  FileBuffer.cpp  FileBuffer.h  FileInfo.cpp  FileInfo.h  FileMasks.cpp  FileMasks.h  FileOperationProgress.cpp  FileOperationProgress.h  FileSystems.cpp  FileSystems.h  FtpFileSystem.cpp  FtpFileSystem.h  HierarchicalStorage.cpp  HierarchicalStorage.h  Http.cpp  Http.h  HttpFileSystem.cpp  HttpFileSystem.h  HttpsFileSystem.cpp  HttpsFileSystem.h  Interface.h  (+57 more)
src/far/: UnicodeString.cpp  UnicodeString.hpp  farrtl.cpp  farrtl.hpp  headers.hpp  local.cpp  local.hpp
src/filezilla/: ApiLog.cpp  ApiLog.h  AsyncProxySocketLayer.cpp  AsyncProxySocketLayer.h  AsyncSocketEx.cpp  AsyncSocketEx.h  AsyncSocketExLayer.cpp  AsyncSocketExLayer.h  AsyncSslSocketLayer.cpp  AsyncSslSocketLayer.h  ControlSocket.cpp  ControlSocket.h  Crypt.cpp  Crypt.h  FileZillaApi.cpp  MFC64bitFix.h  (+31 more)
(+1507 files in other folders)
